--- a/www/css/mapas.css
+++ b/www/css/mapas.css
@@ -1,6 +1,6 @@
 
 #map {
-height: 80%;
+height: 75%;
 border: 1px;
 }
 
@@ -22,10 +22,10 @@ padding: 5px;
 font-family: sans-serif;
 font-weight: bold;
 height: 20%;
-background-color: lightgrey;
+background-color: white;
 }
 
-#informar {
+#info_nombre {
 	font-weight: normal;
 }
 
@@ -33,3 +33,4 @@ background-color: lightgrey;
 	font-size: small;
 	font-weight: normal;
 }
+
