--- a/www/css/mapas.css
+++ b/www/css/mapas.css
@@ -1,4 +1,12 @@
 
+html, body {
+	font-family: 'Roboto','sans-serif';
+	height: 100%;
+	margin: 0;
+	padding: 0;
+}
+
+
 .map {
 height: 100%;
 border: 1px;
@@ -11,10 +19,10 @@ border: 1px;
 
 .floating-panel {
 	position: absolute;
-	max-width: 30%;
-	max-height: 75%;
+	max-width: 95%;
+	max-height: 25%;
 	overflow: auto;
-	top: 5px;
+	bottom: 5px;
 	left: 5px;
 	z-index: 5;
 	background-color: #fff;
@@ -28,15 +36,8 @@ border: 1px;
 	background-color: #fff;
 	padding: 5px;
 	border: 1px solid #999;
-
 }
 
-
-html, body {
-height: 100%;
-margin: 0;
-padding: 0;
-}
 
 .wiki {
 padding: 5px;
@@ -58,7 +59,16 @@ background-color: white;
 }
 
 .init_LatLong {
-	visibility: hidden;
+	/*visibility: hidden;*/
+	position: absolute;
+	overflow: auto;
+	top: 55px;
+	right: 5px;
+	z-index: 5;
+	padding: 5px;
+	background-color: #fff;
+	text-align: left;
+	border: 1px solid #999;
 }
 
 .productoTipico {
